--- a/userregistration/templates/registration.html
+++ b/userregistration/templates/registration.html
@@ -1,3 +1,6 @@
 {% block content %}
-{{form}}
+<form action='' method="POST">
+    {{form}}
+    <input type="submit" value="Sign Up">
+</form>
 {% endblock %}
