--- a/userregistration/templates/registration.html
+++ b/userregistration/templates/registration.html
@@ -1,7 +1,8 @@
 {% block content %}
 <form action='' method="POST">
 {% csrf_token %}
-    {{form}}
+    {{user_form}}
+    {{contributor_form}}
     <input type="submit" value="Sign Up">
 </form>
 {% endblock %}
