--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -1,122 +1,109 @@
-{% block content%}
+{% block content %}
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Ogg Opus Encoder Example</title>
-    {%load staticfiles %}
-    <script src="{% static "recorder.min.js" %}"></script>
-    <style type='text/css'>
-ul { list-style: none; }
-li { margin: 1em; }
-audio { display: block; }
-    </style>
+    {% csrf_token %}
+
+
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Live input record and playback</title>
+  <style type='text/css'>
+    ul { list-style: none; }
+    #recordingslist audio { display: block; margin-bottom: 10px; }
+  </style>
 </head>
 <body>
 
-    <h1>Encoder example</h1>
-    <p>Before you enable monitoring, make sure to either plug in headphones or turn the volume down.</p>
-    <p>This ogg opus implementation does not support more than 2 channels.</p>
+  <h1>Recorder.js simple WAV export example</h1>
 
-    <h2>Options</h2>
+  <p>Make sure you are using a recent version of Google Chrome.</p>
+  <p>Also before you enable microphone input either plug in headphones or turn the volume down if you want to avoid ear splitting feedback!</p>
 
-    <div>
-        <label>monitorGain</label>
-        <input id="monitorGain" type="number" value="0" />
-    </div>
+  <button onclick="startRecording(this);">record</button>
+  <button onclick="stopRecording(this);" disabled>stop</button>
+  
+  <h2>Recordings</h2>
+  <ul id="recordingslist"></ul>
+  
+  <h2>Log</h2>
+  <pre id="log"></pre>
 
-    <div>
-        <label>numberOfChannels</label>
-        <input id="numberOfChannels" type="number" value="1" />
-    </div>
+  <script>
+  function __log(e, data) {
+    log.innerHTML += "\n" + e + " " + (data || '');
+  }
 
-    <div>
-        <label>encoderSampleRate</label>
-        <input id="encoderSampleRate" type="number" value="48000" />
-    </div>
+  var audio_context;
+  var recorder;
 
-    <div>
-        <label>bitRate</label>
-        <input id="bitRate" type="number" value="64000" />
-    </div>
+  function startUserMedia(stream) {
+    var input = audio_context.createMediaStreamSource(stream);
+    __log('Media stream created.');
 
-    <h2>Commands</h2>
-    <button id="init">init</button>
-    <button id="start" disabled>start</button>
-    <button id="pause" disabled>pause</button>
-    <button id="resume" disabled>resume</button>
-    <button id="stopButton" disabled>stop</button>
+    // Uncomment if you want the audio to feedback directly
+    //input.connect(audio_context.destination);
+    //__log('Input connected to audio context destination.');
+    
+    recorder = new Recorder(input);
+    __log('Recorder initialised.');
+  }
 
-    <h2>Recordings</h2>
-    <ul id="recordingslist"></ul>
+  function startRecording(button) {
+    recorder && recorder.record();
+    button.disabled = true;
+    button.nextElementSibling.disabled = false;
+    __log('Recording...');
+  }
 
-    <h2>Log</h2>
-    <pre id="log"></pre>
+  function stopRecording(button) {
+    recorder && recorder.stop();
+    button.disabled = true;
+    button.previousElementSibling.disabled = false;
+    __log('Stopped recording.');
+    
+    // create WAV download link using audio data blob
+    createDownloadLink();
+    
+    recorder.clear();
+  }
 
-    <script>
-var recorder;
-start.addEventListener( "click", function(){ recorder.start(); });
-pause.addEventListener( "click", function(){ recorder.pause(); });
-resume.addEventListener( "click", function(){ recorder.resume(); });
-stopButton.addEventListener( "click", function(){ recorder.stop(); });
-init.addEventListener( "click", function(){
-    if (!Recorder.isRecordingSupported()) {
-        return screenLogger("Recording features are not supported in your browser.");
+  function createDownloadLink() {
+    recorder && recorder.exportWAV(function(blob) {
+      var url = URL.createObjectURL(blob);
+      var li = document.createElement('li');
+      var au = document.createElement('audio');
+      var hf = document.createElement('a');
+      
+      au.controls = true;
+      au.src = url;
+      hf.href = url;
+      hf.download = new Date().toISOString() + '.wav';
+      hf.innerHTML = hf.download;
+      li.appendChild(au);
+      li.appendChild(hf);
+      recordingslist.appendChild(li);
+    });
+  }
+
+  window.onload = function init() {
+    try {
+      // webkit shim
+      window.AudioContext = window.AudioContext || window.webkitAudioContext;
+      navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
+      window.URL = window.URL || window.webkitURL;
+      
+      audio_context = new AudioContext;
+      __log('Audio context set up.');
+      __log('navigator.getUserMedia ' + (navigator.getUserMedia ? 'available.' : 'not present!'));
+    } catch (e) {
+      alert('No web audio support in this browser!');
     }
-    recorder = new Recorder({
-        monitorGain: parseInt(monitorGain.value, 10),
-        numberOfChannels: parseInt(numberOfChannels.value, 10),
-        bitRate: parseInt(bitRate.value,10),
-        encoderSampleRate: parseInt(encoderSampleRate.value,10),
-        encoderPath: "{% static "encoderWorker.min.js" %}"
+    
+    navigator.getUserMedia({audio: true}, startUserMedia, function(e) {
+      __log('No live audio input: ' + e);
     });
-    recorder.addEventListener( "start", function(e){
-        screenLogger('Recorder is started');
-        init.disabled = start.disabled = resume.disabled = true;
-        pause.disabled = stopButton.disabled = false;
-    });
-    recorder.addEventListener( "stop", function(e){
-        screenLogger('Recorder is stopped');
-        init.disabled = false;
-        pause.disabled = resume.disabled = stopButton.disabled = start.disabled = true;
-    });
-    recorder.addEventListener( "pause", function(e){
-        screenLogger('Recorder is paused');
-        init.disabled = pause.disabled = start.disabled = true;
-        resume.disabled = stopButton.disabled = false;
-    });
-    recorder.addEventListener( "resume", function(e){
-        screenLogger('Recorder is resuming');
-        init.disabled = start.disabled = resume.disabled = true;
-        pause.disabled = stopButton.disabled = false;
-    });
-    recorder.addEventListener( "streamError", function(e){
-        screenLogger('Error encountered: ' + e.error.name );
-    });
-    recorder.addEventListener( "streamReady", function(e){
-        init.disabled = pause.disabled = resume.disabled = stopButton.disabled = true;
-        start.disabled = false;
-        screenLogger('Audio stream is ready.');
-    });
-    recorder.addEventListener( "dataAvailable", function(e){
-        var dataBlob = new Blob( [e.detail], { type: 'audio/ogg' } );
-        var fileName = new Date().toISOString() + ".ogg";
-        var url = URL.createObjectURL( dataBlob );
-        var audio = document.createElement('audio');
-        audio.controls = true;
-        audio.src = url;
-        var link = document.createElement('a');
-        link.href = url;
-        link.download = fileName;
-        link.innerHTML = link.download;
-        var li = document.createElement('li');
-        li.appendChild(link);
-        li.appendChild(audio);
-        recordingslist.appendChild(li);
-    });
-    recorder.initStream();
-});
-function screenLogger(text, data) {
-    log.innerHTML += "\n" + text + " " + (data || '');
-}
-    </script>
-</body>
+  };
+  </script>
+
+  {% load static %}
+  <script src="{% static "recorder.js" %}"></script>
+  <script src="../dist/recorder.js"></script>
 {% endblock %}
