feat: Forwards users to recording if logged in & logout button
Forward users to recording page from login or registration page when
they are already logged in. And add base html with sidebar, including
logout button.

--- a/userregistration/templates/login.html
+++ b/userregistration/templates/login.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% block content %}
 
 {% if form.errors %}
@@ -32,5 +33,6 @@
 
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'registration' %}">Register</a></p>
 
 {% endblock %}
