--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+ {% load i18n %}
 {% block content %}
 <head>
     {#TODO necessary? #}
@@ -58,7 +59,7 @@
       var url = URL.createObjectURL(blob);
       var li = document.createElement('li');
       var au = document.createElement('audio');
-      var hf = document.createElement('a');
+      var hf = document.createElement('p');
 
       var button = document.createElement('button');
       var t = document.createTextNode("Upload?");
@@ -74,9 +75,8 @@
           button.disabled = false;
       }
       au.src = url;
-      hf.href = url;
-      hf.download = new Date().toISOString() + '.wav';
-      hf.innerHTML = hf.download;
+      hf.innerHTML = 
+          "{% trans "please listen to your recording before you upload" %}";
       li.appendChild(au);
       li.appendChild(hf);
       li.appendChild(button);
