--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -20,7 +20,7 @@
   <p>Make sure you are using a recent version of Google Chrome.</p>
   <p>Also before you enable microphone input either plug in headphones or turn the volume down if you want to avoid ear splitting feedback!</p>
 
-  <button onclick="startRecording(this);">record</button>
+  <button onclick="startRecording(this);" id='record_button'>record</button>
   <button onclick="stopRecording(this);" disabled>stop</button>
   
   <h2>Recordings</h2>
@@ -31,6 +31,22 @@
   var audio_context;
   var recorder;
 
+  function disableRecordingButtons() {
+    var button_list = document.getElementsByName('rerecord_button');
+    for( var i = 0; i<button_list.length; i++) {
+        button_list[i].disabled = true;
+    }
+    document.getElementById('record_button').disabled = true;
+  }
+
+  function enableRecordingButtons() {
+    var button_list = document.getElementsByName('rerecord_button');
+    for( var i = 0; i<button_list.length; i++) {
+        button_list[i].disabled = false;
+    }
+    document.getElementById('record_button').disabled = false;
+  }
+
   function startUserMedia(stream) {
     var input = audio_context.createMediaStreamSource(stream);
 
@@ -39,14 +55,14 @@
 
   function startRecording(button) {
     recorder && recorder.record();
-    button.disabled = true;
+    disableRecordingButtons();
     button.nextElementSibling.disabled = false;
   }
 
   function stopRecording(button) {
     recorder && recorder.stop();
     button.disabled = true;
-    button.previousElementSibling.disabled = false;
+    enableRecordingButtons();
     
     // create WAV download link using audio data blob
     createDownloadLink();
@@ -56,34 +72,74 @@
 
   function createDownloadLink() {
     recorder && recorder.exportWAV(function(blob) {
-      var url = URL.createObjectURL(blob);
+      var audiofile = blob;
+      var url = URL.createObjectURL(audiofile);
       var li = document.createElement('li');
       var au = document.createElement('audio');
       var hf = document.createElement('p');
 
-      var button = document.createElement('button');
-      var t = document.createTextNode("Upload?");
+      var upload_button = document.createElement('button');
+      var rerecord_button = document.createElement('button');
+      var stop_button = document.createElement('button');
+      var upload_text = document.createTextNode("Upload?");
+      var rerecord_text = document.createTextNode("Redo?");
+      var stop_text = document.createTextNode("stop");
       var uploaded = false;
-      button.id = 'button';
-      button.disabled = true;
-      button.appendChild(t);
+      var played = false;
+      upload_button.id = 'upload_button';
+      rerecord_button.name = 'rerecord_button';
+      stop_button.id = 'stop_button';
+      upload_button.disabled = true;
+      stop_button.disabled = true;
+      upload_button.appendChild(upload_text);
+      rerecord_button.appendChild(rerecord_text);
+      stop_button.appendChild(stop_text);
 
-      button.onclick = function() {
-          upload(blob);
-          t.nodeValue = "Done!"
-          button.disabled = true;
+      upload_button.onclick = function() {
+          upload(audiofile);
+          upload_text.nodeValue = "Done!"
+          upload_button.disabled = true;
+          rerecord_button.disabled = true;
           uploaded = true;
-      };
+      }
+
+      stop_button.onclick = function() {
+          recorder && recorder.stop();
+          recorder && recorder.exportWAV(function(blob) {
+              audiofile = blob;
+              url = URL.createObjectURL(audiofile);
+              au.src = url;
+              recorder.clear();
+          })
+          stop_button.disabled = true;
+          rerecord_button.disabled = false;
+          if (played) upload_button.disabled = false;
+          enableRecordingButtons();
+      }
+
+      rerecord_button.onclick = function() {
+          recorder && recorder.record();
+          stop_button.disabled = false;
+          upload_button.disabled = true;
+          disableRecordingButtons();
+          played = false;
+
+      }
+
+      
       au.controls = true;
       au.onplay =  function() {
-          if (!uploaded) button.disabled = false;
+          if (!uploaded) upload_button.disabled = false;
+          played = true;
       }
       au.src = url;
       hf.innerHTML = 
           "{% trans "please listen to your recording before you upload" %}";
       li.appendChild(au);
       li.appendChild(hf);
-      li.appendChild(button);
+      li.appendChild(upload_button);
+      li.appendChild(rerecord_button);
+      li.appendChild(stop_button);
 
       recordingslist.appendChild(li);
     });
