--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 {% load i18n %}
+{% load static %}
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{% static "style.css" %}"/>
     <title>{% block title %}templates/base.html{% endblock %}</title>
 </head>
 <body>
