--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -3,20 +3,41 @@
 {% load static %}
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{% static "style.css" %}"/>
     <title>{% block title %}templates/base.html{% endblock %}</title>
 </head>
 <body>
-<div id="sidebar">
     {% block sidebar %}
-    <ul>
-        <li><a href="/">Home</a></li>
-
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li {% if request.path == '/home/' %}class="active"{% endif %}><a href="home">Home</a></li>
+            <li {% if request.path == '/about/' %}class="active"{% endif %}><a href="about">About</a></li>
+            <li {% if request.path == '/contact/' %}class="active"{% endif %}><a href="contact">Contact</a></li>
         {% if user.is_authenticated %}
             <li><a href="/accounts/logout">Logout</a></li>
         {% else %}
-            <li><a href="/accounts/login">Login</a></li>
+            <li {% if request.path == '/accounts/login/' %}class="active"{% endif %}><a href="/accounts/login">Login</a></li>
+            <li {% if request.path == '/accounts/registration/' %}class="active"{% endif %}><a href="/accounts/registration">Register</a></li>
         {% endif %}
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+<div class="navbar" id="sidebar">
+    <ul>
+        <li><a href="/">Home</a></li>
+
     </ul>
     {% endblock %}
 </div>
