--- a/userregistration/templates/login.html
+++ b/userregistration/templates/login.html
@@ -1,38 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
+{% load bootstrap3 %}
+{% bootstrap_css %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
+    <div class="container">
+<form class="form-signin" method="post" action="{% url 'login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+{% bootstrap_form form %}
 
-<input type="submit" value="login" />
+  {% buttons %}
+    <button type="submit" class="btn btn-primary">
+      {% bootstrap_icon "ok-sign" %} Login
+    </button>
+  {% endbuttons %}
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-<p><a href="{% url 'registration' %}">Register</a></p>
-
+    </div>
 {% endblock %}
