--- a/userregistration/templates/login.html
+++ b/userregistration/templates/login.html
@@ -11,7 +11,7 @@
 
   {% buttons %}
     <button type="submit" class="btn btn-primary">
-      {% bootstrap_icon "ok-sign" %} Login
+      Login
     </button>
   {% endbuttons %}
 <input type="hidden" name="next" value="{{ next }}" />
