--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -17,28 +17,43 @@
 </head>
 <body>
 
-  <h1>Recording</h1>
+    <h1>{% trans "Recording" %}</h1>
 
-  <h2>Welcome {{ user.last_name }} {{ user.first_name }}!</h2>
-  <p>Record the word by clicking on the "record" button and play it to check
+    <h2>{% trans "Welcome" %} {{ user.last_name }} {{ user.first_name }}</h2>
+    <p> {% blocktrans %}
+  Record the word by clicking on the "record" button and play it to check
   if it is correct. You can restart your recording by clicking again on the
   "record" button if you think you made a mistake. Click on the "upload" button
-  to upload your recording, a new word will appear when you do so.</p>
-  <p>You can make as many recordings as you like, and you can come back later
-  to this page to make more recordings.</p>
-  <p>Make sure you are using a recent version of Google Chrome.</p>
-  <h2>Next recording:</h2>
-  <h3 id="nextSyllable">This is the paragraph you cant to be able to edit</h3>
-  <h2>Recordings</h2>
+  to upload your recording, a new word will appear when you do so.
+  {% endblocktrans %}</p>
+    <p> {% blocktrans %}
+  You can make as many recordings as you like, and you can come back later
+  to this page to make more recordings.
+  {% endblocktrans %}</p>
+    <p> {% blocktrans %}
+    Make sure you are using a recent version of Google Chrome.
+    {% endblocktrans %}</p>
+    <h2>{% trans "Next recording:" %}</h2>
+    <h3 id="nextSyllable">{% trans "pinyin should be here" %}</h3>
+    <h2>{% trans "Recordings" %}</h2>
   <ul id="recordingslist2">
       <li>
           {% buttons %}
           <audio id='audioElement' controls></audio>
           </li>
           <li>
-          <button title='please listen to your recording before you upload it' id='uploadButton' class='btn btn-primary'>upload</button>
-          <button id='recordButton' class='btn btn-default'>record</button>
-          <button id='stopButton' class='btn btn-default'>stop</button>
+          <button title=
+      {% trans "'please listen to your recording before you upload it'" %}
+              id='uploadButton'
+              class='btn btn-primary'>
+              {% trans "upload" %}
+          </button>
+          <button id='recordButton' class='btn btn-default'>
+              {% trans "record" %}
+          </button>
+          <button id='stopButton' class='btn btn-default'>
+              {% trans "stop" %}
+          </button>
           {% endbuttons %}
       </li>
   </ul>
@@ -95,7 +110,7 @@
       window.URL = window.URL || window.webkitURL;
       audio_context = new AudioContext;
     } catch (e) {
-      alert('No web audio support in this browser!');
+        alert({% trans "'No web audio support in this browser!'" %});
     }
     uploadButton.disabled = true;
     stopButton.disabled = true;
