--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 {% load i18n %}
 {% load static %}
+{% load bootstrap3 %}
+{% bootstrap_css %}
 <html lang="en">
 <body>
     {% block sidebar %}
@@ -42,6 +44,32 @@
                 <a href="/accounts/registration">{% trans "Register" %}</a>
             </li>
         {% endif %}
+          </ul>
+          <ul class="nav navbar-nav navbar-right navbar-form">
+              <li>
+              <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                  <input name="next" type="hidden" value="{{ redirect_to }}" />
+                  <div class="form-group">
+                  <select  class="form-control" name="language">
+                      {% get_current_language as LANGUAGE_CODE %}
+                      {% get_available_languages as LANGUAGES %}
+                      {% get_language_info_list for LANGUAGES as languages %}
+                      {% for language in languages %}
+                      <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                      {{ language.name_local }} ({{ language.code }})
+                      </option>
+                      {% endfor %}
+                  </select>
+                  </div>
+              </li>
+              <li>
+                  {% buttons %}
+                  <button type="submit" value="Go" class="btn" />
+                      {% trans "Go" %}
+                  </button>
+                  {% endbuttons %}
+              </li>
+              </form>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
