--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -19,7 +19,9 @@
 
     <h1>{% trans "Recording" %}</h1>
 
-    <h2>{% trans "Welcome" %} {{ user.last_name }} {{ user.first_name }}</h2>
+    <h2>{% blocktrans with first_name=user.first_name last_name=user.last_name %}
+        Welcome {{ last_name }} {{ first_name }}!
+        {% endblocktrans %}</h2>
     <p> {% blocktrans %}
   Record the word by clicking on the "record" button and play it to check
   if it is correct. You can restart your recording by clicking again on the
