--- a/userregistration/templates/registration.html
+++ b/userregistration/templates/registration.html
@@ -7,9 +7,33 @@
 <link rel="stylesheet" href="/static/css/asterisk.css" />
 <div class="container form-group">
 <form action='' method="POST">
+       {% for field in user_form %}
+        <div class="form-group{% if field.field.required %} required{% endif %}">
+            <label class="control-label">
+                {% bootstrap_label field.label %}
+            </label>
+            <div class="">
+                {% bootstrap_field field show_label=False form_group_class=None %}
+            </div>
+        </div>
+   {% endfor %}
     {% csrf_token %}
-    {%bootstrap_form user_form%}
-    {% bootstrap_form contributor_form %}
+        <div class="form-group{% if contributor_form.sex.field.required %} required{% endif %}">
+            <label class="control-label">
+                {% bootstrap_label contributor_form.sex.label %}
+            </label>
+            <div class="">
+                {% bootstrap_field contributor_form.sex show_label=False %}
+            </div>
+        </div>
+        <div class="form-group{% if contributor_form.accepted_license.field.required %} required{% endif %}">
+            <label class="control-label">
+                {% bootstrap_label "Accept license" %}
+            </label>
+            <div class="">
+                {% bootstrap_field contributor_form.accepted_license show_label=False %}
+            </div>
+        </div>
 
 
        {% for field in captcha_form %}
