--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -22,7 +22,7 @@
           <ul class="nav navbar-nav">
             <li {% if request.path == '/home/' %}class="active"{% endif %}>
                 {% comment %}Translators: Webpage Home{% endcomment %}
-                <a href="home">{% trans "Home" %}</a>
+                <a href="/home">{% trans "Home" %}</a>
             </li>
             <li {% if request.path == '/recording/about/' %}class="active"{% endif %}>
                 <a href="/recording/about/">{% trans "About" %}</a>
