feat: add password reset

--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -81,7 +81,14 @@
     </ul>
     {% endblock %}
 </div>
-<div id="content">
+<div class="container">
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+        {% endif %}
+    </ul>
     {% block content %}{% endblock %}
 </div>
 </body>
