--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -19,6 +19,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">{% trans "Lost password?" %}</a></p>
+<p><a href="{% url 'reset_password' %}">{% trans "Lost password?" %}</a></p>
     </div>
 {% endblock %}
