--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
 {% load i18n %}
 {% load static %}
 {% load bootstrap3 %}
-{% bootstrap_css %}
+
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        {% bootstrap_css %}
+        <script src="{% bootstrap_jquery_url %}"></script>
+        <script src="{% bootstrap_javascript_url %}"></script>
+    </head>
+
 <body>
     {% block sidebar %}
     <!-- Fixed navbar -->
@@ -29,14 +35,31 @@
             </li>
             <li {% if request.path == '/contact/' %}class="active"{% endif %}>
                 <a href="/contact">{% trans "Contact" %}</a></li>
+
+
         {% if user.is_authenticated %}
-            <li>
-                <a href="/accounts/logout">{% trans "Logout" %}</a>
-            </li>
             <li {% if request.path == '/recording/' %}class="active"{% endif %}>
                 <a href="/recording">{% trans "Recording" %}</a>
             </li>
-        {% else %}
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                      {{ user.username }}
+                      <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+            <li>
+                <a href="/accounts/logout">{% trans "Logout" %}</a>
+            </li>
+            <li>
+                <a href="/accounts/change_password">{% trans "Change password" %}</a>
+            </li>
+                </ul>
+              </li>
+
+            {% else %}
+            </ul>
+          <ul class="nav navbar-nav navbar-right">
             <li {% if request.path == '/accounts/login/' %}class="active"{% endif %}>
                 <a href="/accounts/login">{% trans "Login" %}</a>
             </li>
@@ -44,7 +67,6 @@
                 <a href="/accounts/registration">{% trans "Register" %}</a>
             </li>
         {% endif %}
-          </ul>
           <ul class="nav navbar-nav navbar-right navbar-form">
               <li>
               <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
@@ -61,6 +83,7 @@
                       {% endfor %}
                   </select>
                   </div>
+              </form>
               </li>
               <li>
                   {% buttons %}
@@ -69,7 +92,7 @@
                   </button>
                   {% endbuttons %}
               </li>
-              </form>
+          </ul>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -87,8 +110,8 @@
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">{{ message }}</div>
         {% endfor %}
-        {% endif %}
     </ul>
+        {% endif %}
     {% block content %}{% endblock %}
 </div>
 </body>
