--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-md-4">
         <audio controls>
-                <source src="{% static captcha_form.audio_file %}" type="audio/mpeg">
+                <source src="{% static captcha_form.audio_path %}" type="audio/mpeg">
         </audio>
             </div>
             <div class="col-md-8">
