--- a/emilvanherp/templates/base.html
+++ b/emilvanherp/templates/base.html
@@ -4,6 +4,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="{% bootstrap_jquery_url %}"></script>
         <script src="{% bootstrap_javascript_url %}"></script>
         {% bootstrap_css %}
