--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -27,7 +27,7 @@
   to this page to make more recordings.
   {% endblocktrans %}</p>
     <p> {% blocktrans %}
-    Make sure you are using a recent version of Google Chrome.
+    Make sure you are using a recent version of Google Chrome or Firefox.
     {% endblocktrans %}</p>
     <h2>{% trans "Next recording:" %}</h2>
     <h3 id="nextSyllable">{% trans "pinyin should be here" %}</h3>
@@ -102,7 +102,7 @@
     try {
       // webkit shim
       window.AudioContext = window.AudioContext || window.webkitAudioContext;
-      navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia;
+      navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
       window.URL = window.URL || window.webkitURL;
       audio_context = new AudioContext;
     } catch (e) {
