fix: about page

--- a/recording/templates/about.html
+++ b/recording/templates/about.html
@@ -22,12 +22,13 @@
     your information. If you do not want to give your real name, you can just
     fill in an alias.<br>
     If you want to participate in this project you will also need accept that
-    your recordings will be released under the Creative Commons CC BY-SA 4.0
-    license, click on the link to find more information about the license.
+    your recordings will be released under the
+    <a href='https://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons CC BY-SA 4.0 license</a>,
+    click on the link to find more information about the license.
     {% endblocktrans %} </p>
     <h2> {%trans "Recording" %} </h2>
     <p> {% blocktrans %}
-    After registration you can go the recording page. there you will be shown
+    After registration you can go the recording page. There you will be shown
     pinyin you can record using the record button. Click on the stop button
     when you finish recording and press the play button to listen to your
     recording. Restart your recording if necessary or click on the upload
