fix: make use of collected data clearer

--- a/recording/templates/about.html
+++ b/recording/templates/about.html
@@ -19,8 +19,11 @@
     You will need to register on the
     <a href="/accounts/registration/"> registration page</a>
     and fill in
-    your information. If you do not want to give your real name, you can just
+    your information. <br>
+    Your name will only be used for attribution,
+    If you do not want to give your real name you can just
     fill in an alias.<br>
+    If you do not fill in any name your e-mail address will be used for attribution.<br>
     If you want to participate in this project you will also need accept that
     your recordings will be released under the
     <a href='https://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons CC BY-SA 4.0 license</a>,
