--- a/mandarinrecording/templates/base.html
+++ b/mandarinrecording/templates/base.html
@@ -7,6 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="{% static 'favicon.ico' %}">
         <script src="{% bootstrap_jquery_url %}"></script>
         <script src="{% bootstrap_javascript_url %}"></script>
         {% bootstrap_css %}
