fix: add link to source-

--- a/mandarinrecording/templates/contact.html
+++ b/mandarinrecording/templates/contact.html
@@ -8,7 +8,8 @@
     <h1> {%trans "Questions? Suggestions?" %} </h1>
     <p> {% blocktrans %}
         e-mail: emilvanherp@gmail.com <br>
-        wechat: emil643
+        wechat: emil643 <br>
+        website source: https://github.com/Emilv2/mandarinrecording
     {% endblocktrans %} </p>
     </div>
 
