refactor: clean static files

--- a/recording/templates/recording.html
+++ b/recording/templates/recording.html
@@ -162,5 +162,5 @@ function upload(blob, pinyin) {
 }
   </script>
 
-  <script src="{% static "recorder.js" %}"></script>
+  <script src="{% static "recording/js/recorder.js" %}"></script>
 {% endblock %}
